# get-me-food

./: .gitignore  README.md  pyproject.toml
docs/diagrams/: overview.plantuml
get_me_food/: __main__.py  crawler.py  get_me_food.py  ingredients.py  providers.py
get_me_food/commons/: cmd_arguments.py  common_logger.py
tests/: test_run_main.py
